[package]
name = "xerxes"
version = "0.1.0"
authors = ["levi bland <levi.bland@icloud.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quasar = { git = "https://github.com/levibland/quasar", version = "0.1.0" }
colored = "1.9.3"
rustyline = "6.1.2"
rustyline-derive = "0.3.1"
statrs = "0.12.0"